# SoccerPredict

./: .cursorrules  .env.example  .gitignore  LICENSE  README.md  init_db.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: default.yaml
data/: README.md  feature_catalog.txt  wc2026_elo.json  wc2026_results.json  wc2026_rosters.json  wc2026_schedule.json  wc2026_squads.json
data/odds/: euro2020_oddsportal.csv  match_odds_unified.csv  wc2018_oddsportal.csv  wc2022_oddsportal.csv
data/tm_raw/: TUR_scorers.json  UZB_national.json  algeria_national.json  algeria_raw.html  australia_national.json  australia_raw.html  bosnia_national.json  (+33 more)
db/: models.py
extractors/: elo_scraper.py  euro2020_events.py  fbref_scraper.py  football_data_loader.py  odds_loader.py  oddsportal_euro2020.py  player_event_metrics.py  statsbomb_events.py  statsbomb_parser.py  statsbomb_wc2018_parser.py  tournament_events.py  wc2018_events.py
features/: club_elo.py  club_match_dataset.py  club_names.py  lineup_minutes.py  match_dataset.py  match_features.py  player_aggregation.py  team_features.py  team_profile.py  upset_dataset.py
models/: club_predictor.py  combined_predictor.py  confidence_backtest.py  deep_analysis.py  feature_engineering.py  market_fusion.py  market_odds.py  match_predictor.py  predict_match.py  profit_analysis.py  selected_features.txt  upset_gating.py  upset_predictor.py  upset_roi.py
notebooks/: 01_explore_world_cup.ipynb
scripts/: _analyze_gaps.py  _extract_teams.py  _league_distribution.py  _process_cached.py  _test_fotmob.py  _update_tm.py  _writer.py  audit_player_coverage.py  download_odds.py  fbref_direct_scrape.py  fetch_world_cup_data.py  fill_missing_stats.py  list_features.py  list_lopsided_predictions.py  migrate_national_stats_columns.py  parse_tm_html.py  parse_wc2026_squads.py  predict_wc2026_groups.py  record_wc2026_result.py  scrape_all_extra.py  scrape_extra_leagues.py  scrape_fbref_direct.py  scrape_wc2026_missing.py  seed_club_players.py  underdog_upset_analysis.py  update_db_from_tm.py
tests/: test_features.py  test_smoke.py
utils/: encoding.py  entity_resolution.py
(+15 files in other folders)
