[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soccerpredict"
version = "0.1.0"
description = "Soccer match prediction toolkit. Initially targeting the FIFA World Cup, extensible to club leagues."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "minghuai7813" }]
keywords = ["soccer", "football", "prediction", "machine-learning", "world-cup", "soccerdata"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "soccerdata>=1.8",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "loguru>=0.7",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.9", "seaborn>=0.13", "plotly>=5.24"]
notebook = ["jupyterlab>=4.2", "ipykernel>=6.29"]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[project.urls]
Repository = "https://github.com/minghuai7813/SoccerPredict"
Issues = "https://github.com/minghuai7813/SoccerPredict/issues"

[project.scripts]
soccerpredict = "soccerpredict.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
soccerpredict = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
packages = ["soccerpredict"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]
